--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <title>Chat with Llama2</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assistente de IA do Único</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link href="resources/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -22,33 +22,33 @@
     <div class="container">
         <div class="row pt-3">
             <div class="col-md-8 col-12">
-                <h1>Chat with Ollama</h1>
+                <h1>Assistente de IA do Único</h1>
             </div>
             <div id="model-controls" class="col-md-4 col-12 text-md-end text-start mb-3">
                 <div class="d-flex flex-column align-items-md-end align-items-start">
 
                     <div id="host-address-select">
                         <div class="d-flex align-items-center mb-2">
-                            <label for="host-address" class="form-label me-2" style="font-size: smaller;">Hostname</label>
-                            <input id="host-address" class="form-control" type="text" placeholder="http://localhost:11434" style="width: auto;"></select>
+                            <label for="host-address" class="form-label me-2 hidden " style="font-size: smaller;">Hostname</label>
+                            <input id="host-address" class="form-control hidden" type="text" placeholder="http://localhost:11434" style="width: auto;"></select>
                         </div>
                     </div>
 
                     <div id="system-prompt-select">
                         <div class="d-flex align-items-center mb-2">
-                            <label for="system-prompt" class="form-label me-2" style="font-size: smaller;">System Prompt</label>
-                            <input id="system-prompt" class="form-control" type="text" placeholder="You are a helpful assistant" style="width: auto;"></select>
+                            <label for="system-prompt" class="form-label me-2 hidden" style="font-size: smaller;">System Prompt</label>
+                            <input id="system-prompt" class="form-control hidden" type="text" placeholder="Você é um professor auxiliar", value="Você vai auxiliar professores a montar planos de desenvolvimento individualizados para ensinar pessoas com deficiência. Suas resposta tem que levar em conta as deficiências relatas pelo professor. Você deve auxiliar o professor no assunto que ele te solicitar e como o estutante tem deficiência sua resposta deve levar a elaboração de um plano de desenvolvimento individual adaptado para a deficiência. Procure responder de maneira clara e divida seu raciocinio em tópicos. Se o professor não relatar nenhuma deficiência, você deve perguntar qual a deficiencia do estudante. Responda sempre em Português do Brasil" style="width: auto;"></select>
                         </div>
                     </div>
 
                     <div class="d-flex align-items-center mb-2">
-                        <label for="model-select" class="form-label me-2" style="font-size: smaller;">Model:</label>
+                        <label for="model-select" class="form-label me-2" style="font-size: smaller;">Modelo do Assistente:</label>
                         <select class="form-select" id="model-select" style="width: auto;"></select>
                     </div>
                     <div class="d-flex align-items-center">
-                        <label for="chat-select" class="form-label me-2" style="font-size: smaller;">History:</label>
-                        <select id="chat-select" class="form-select" style="width: auto;">
-                            <option value="" disabled selected>Select a chat</option>
+                        <label for="chat-select" class="form-label me-2 hidden" style="font-size: smaller;">Histórico:</label>
+                        <select id="chat-select" class="form-select hidden" style="width: auto;">
+                            <option value="" disabled selected>Selecione uma Conversa</option>
                         </select>
                     </div>
                 </div>
@@ -57,8 +57,8 @@
         <div id="scroll-wrapper">
             <div id="chat-container" class="card">
                 <div class="text-end">
-                    <button id="delete-chat" class="btn btn-danger" type="button">Delete Chat</button>
-                    <button id="save-chat" class="btn btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#nameModal">Save Chat</button>
+                    <button id="delete-chat" class="btn btn-danger hidden" type="button">Deletar Conversa</button>
+                    <button id="save-chat" class="btn btn-secondary hidden" type="button" data-bs-toggle="modal" data-bs-target="#nameModal">Salvar Conversa</button>
                 </div>
                 <div class="card-body">
                     <div id="chat-history"></div>
@@ -68,8 +68,8 @@
     </div>
     <div class="container p-2 card" id="input-area">
         <div class="input-group">
-            <textarea class="form-control" id="user-input" placeholder="Type your question here..."></textarea>
-            <button id="send-button" class="btn btn-primary">Send</button>
+            <textarea class="form-control" id="user-input" placeholder="Descreva aqui seu objetivo pedagógico as deficiências do estudante e sua idade..."></textarea>
+            <button id="send-button" class="btn btn-primary">Enviar</button>
         </div>
     </div>
 
@@ -78,15 +78,15 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="nameModalLabel">Enter Your Name</h5>
+          <h5 class="modal-title" id="nameModalLabel">Coloque seu nome</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
           <input type="text" class="form-control" id="userName" placeholder="Your Name">
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" id="saveName">Save</button>
+          <button type="button" class="btn btn-secondary hidden" data-bs-dismiss="modal">Fechar</button>
+          <button type="button" class="btn btn-primary hidden" id="saveName">Salvar</button>
         </div>
       </div>
     </div>
@@ -96,7 +96,7 @@
     <div class="modal-dialog modal-xl">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Unable to access Ollama server</h5>
+          <h5 class="modal-title">Não foi possível se conectar com o servidor</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
         </div>
         <div class="modal-body">
